--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://use.fontawesome.com/66a13644b6.js"></script>
+    <script src="https://checkout.stripe.com/checkout.js"></script>
 
   </body>
 
