--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="./index.css" rel="stylesheet" type="text/css">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -33,6 +34,10 @@
     <title>React App</title>
   </head>
   <body>
+
+  <div class="mask">
+    <div class="loader"></div>
+  </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -45,6 +50,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script src="./index.js"></script>
     <script src="https://use.fontawesome.com/66a13644b6.js"></script>
     <script src="https://checkout.stripe.com/checkout.js"></script>
 
