--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="google-site-verification" content="68q4y68OatC028cc6Jfath-aFdIk7tIxzVaMpFeocsc" />
     <link href="./index.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="logo.png" type="images/png"/>
 
